Refactor initializer service to startup. startup.initialize() now assigns API data to ptData.

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="splash" ng-init="showSplash=true" ng-show="showSplash" >
-    One momement while your patient's data is retrieved...
+    One moment while your patient's data is retrieved...
   </div>
 
   <div ng-view class="container"></div>
