--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,24 @@
   <title>JNC8 Risk Calculator</title>
   <link rel="stylesheet" href="css/normalize.css"/>
   <link rel="stylesheet" href="css/main.css"/>
+
+  <script type='text/javascript' href='../bower_components/jquery/jquery.min.js'></script>
+  <script src="../bower_components/angular/angular.js"></script>
+  <script src="js/line-chart.min.js"></script>
+  <script src="../bower_components/angular-route/angular-route.js"></script>
+  <script src="../bower_components/d3/d3.min.js"></script>
+
+
+  <script src="js/app.js"></script>
+  <script src="js/services.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/directives.js"></script>
 </head>
 <body>
-  <div class="splash" ng-init="showSplash=true" ng-show="showSplash" >
-    One moment while your patient's data is retrieved...
+  <div class="splash container" ng-init="showSplash=true" ng-show="showSplash" >
+    <img src="img/pageloader.gif" class="loading">
+    <p class="loading">One moment while your patient's data is retrieved...</p>
   </div>
 
   <div ng-view class="container"></div>
@@ -16,12 +30,5 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-  <script src="../bower_components/angular/angular.js"></script>
-  <script src="../bower_components/angular-route/angular-route.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
 </body>
 </html>
