--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,11 @@
 
   <script type='text/javascript' href='../bower_components/jquery/jquery.min.js'></script>
   <script src="../bower_components/angular/angular.js"></script>
-  <script src="js/line-chart.min.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
-  <script src="../bower_components/d3/d3.min.js"></script>
+  <!--[if lte IE 8]><script src="../bower_components/r2d3/r2d3.js" charset="utf-8"></script><![endif]-->
+      <!--[if gte IE 9]><!-->
+      <script src="../bower_components/d3/d3.js"></script>
+      <!--<![endif]-->
 
 
   <script src="js/app.js"></script>
