Algorithm logic in separate .js file. Create medication data structure. Add files to SpecRunner.

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -12,6 +12,7 @@
   <script src="lib/jasmine-2.0.0/boot.js"></script>
 
   <!-- source files -->
+  <script src="../lib/meds_jnc8.js"></script>
   <script src="../lib/algorithm_jnc8.js"></script>
 
   <!-- spec files -->
