--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
       <script src="../bower_components/d3/d3.js"></script>
       <!--<![endif]-->
 
+  <script src="../lib/meds_jnc8.js"></script>
   <script src="../lib/algorithm_jnc8.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
