Add underscore. chooseNextMeds function passes all specs.

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <script src="../bower_components/angular/angular.js"></script>
   <script src="js/line-chart.min.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
+  <script src="../bower_components/underscore/underscore.js"></script>
   <!--[if lte IE 8]><script src="../bower_components/r2d3/r2d3.js" charset="utf-8"></script><![endif]-->
       <!--[if gte IE 9]><!-->
       <script src="../bower_components/d3/d3.js"></script>
