--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -10,6 +10,7 @@
   <script src="lib/jasmine-2.0.0/jasmine.js"></script>
   <script src="lib/jasmine-2.0.0/jasmine-html.js"></script>
   <script src="lib/jasmine-2.0.0/boot.js"></script>
+  <script src="../bower_components/underscore/underscore.js"></script>
 
   <!-- source files -->
   <script src="../lib/meds_jnc8.js"></script>
