Delete removeMed function. Continue editing view.

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -69,7 +69,7 @@
       <table id="medications" width="100%">
         <tr class="header">
           <td width="40%">Drug name</td>
-          <td width="30%">Dosage</td>
+          <td width="30%">dose</td>
           <td width="15%">Max?</td>
           <td width="15%">Remove</td>
         </tr>
