Added an informational footer

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,13 @@
   </div>
 
   <div ng-view class="container"></div>
+  
+  <div class="page-footer cf">
+    <ul class="cf">
+      <li>About this JNC8 Calculator</li>
+      <li>&copy; 2014 Moxe Health</li>
+    </ul>
+  </div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
