Add redirect to index/app reload on page refresh

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
     <p class="loading">One moment while your patient's data is retrieved...</p>
   </div>
 
-  <div ng-view class="container"></div>
+  <div ng-view class="container" ng-show="!showSplash"></div>
   
   <div class="page-footer cf" ng-show="!showSplash">
     <ul class="cf">
