Fixed some small bugs in the css and services

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" id="ng-app" ng-app="myApp">
+<html lang="en" id="ng-app" ng-app="myApp"><!-- add back id="ng-app" -->
 <head>
   <meta charset="utf-8">
   <title>JNC8 Risk Calculator</title>
@@ -31,8 +31,7 @@
 <body>
   <div class="page-header">
     <h1>JNC8 Treatment Calculator</h1>
-  </div>
-  <div class="splash container" ng-init="showSplash=true" ng-show="showSplash" >
+  <div class="splash container" ng-init="showSplash=true" ng-show="showSplash">
     <img src="img/pageloader.gif" class="loading">
     <p class="loading">One moment while your patient's data is retrieved...</p>
   </div>
