--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" id="ng-app" xmlns:ng="http://angularjs.org" ng-app="myApp"><!-- add back id="ng-app" -->
+<html lang="en" id="ng-app" ng-app="myApp"><!-- add back id="ng-app" -->
 <head>
   <meta charset="utf-8">
   <title>JNC8 Risk Calculator</title>
